--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Ganesh Murugan
 logo: /assets/img/Profile1.jpg
-description: Minimal is a theme for GitHub Pages.
+description: Ganesh Murugan
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
